--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ function teste() {
         {
             text1: "Wakatime",
             link: "https://wakatime.com/dashboard",
-            imgSrc: "/img/wakatime.svg", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
+            imgSrc: "https://habeckk.github.io/Gerenciador-de-App1/img/wakatime.svg", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
             desc: "Monitora o tempo gasto codificando para melhorar a produtividade e a eficiência do desenvolvedor.",
             text: "Abrir"
         },
