--- a/index.html
+++ b/index.html
@@ -131,21 +131,21 @@ function teste() {
         {
             text1: "Icons8",
             link: "https://icons8.com.br/icons",
-            imgSrc: "/img/novo-logotipo.svg", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
+            imgSrc: "https://habeckk.github.io/Gerenciador-de-App1//img/novo-logotipo.svg", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
             desc: "Oferece ícones gratuitos e ferramentas de design para criar interfaces visuais atraentes.",
             text: "Abrir"
         },
         {
             text1: "Openai",
             link: "https://chat.openai.com/c/c350cb23-2215-4222-8f4d-6ebc82b4df0f",
-            imgSrc: "/img/icons8-chatgpt.svg", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
+            imgSrc: "https://habeckk.github.io/Gerenciador-de-App1//img/icons8-chatgpt.svg", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
             desc: "Plataforma de inteligência artificial para criar e implantar modelos de IA avançados.",
             text: "Abrir"
         },
         {
             text1: "Bard",
             link: "https://bard.google.com/chat",
-            imgSrc: "/img/Google_Bard_logo.svg", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
+            imgSrc: "https://habeckk.github.io/Gerenciador-de-App1//img/Google_Bard_logo.svg", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
             desc: "Uma nova forma de escrever com IA, ajudando na geração de texto e ideias criativas.",
             text: "Abrir"
         },
@@ -159,14 +159,14 @@ function teste() {
         {
             text1: "VScode",
             link: "https://vscode.dev/",
-            imgSrc: "/img/icons8-visual-studio-code-2019.svg", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
+            imgSrc: "https://habeckk.github.io/Gerenciador-de-App1//img/icons8-visual-studio-code-2019.svg", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
             desc: "Um editor de código-fonte leve e poderoso, altamente personalizável, desenvolvido pela Microsoft.",
             text: "Abrir"
         },
         {
             text1: "Copiloto",
             link: "https://www.bing.com/search?q=Bing%20AI&showconv=1&form=MA13FV&wlexpsignin=1",
-            imgSrc: "/img/9759dc3bced042989f176efa44fc0fa0.png", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
+            imgSrc: "https://habeckk.github.io/Gerenciador-de-App1//img/9759dc3bced042989f176efa44fc0fa0.png", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
             desc: "Um assistente de codificação por IA que oferece sugestões de código em tempo real",
             text: "Abrir"
         },
@@ -180,14 +180,14 @@ function teste() {
         {
             text1: "DRAW.IO",
             link: "https://app.diagrams.net/",
-            imgSrc: "/img/drawio.png", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
+            imgSrc: "https://habeckk.github.io/Gerenciador-de-App1//img/drawio.png", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
             desc: "Ferramenta de diagramação online gratuita para criar diagramas, fluxogramas e wireframes.",
             text: "Abrir"
         },
         {
             text1: "w3schools",
             link: "https://www.w3schools.com/html/tryit.asp?filename=tryhtml_intro",
-            imgSrc: "/img/wwww3schools.jpg", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
+            imgSrc: "https://habeckk.github.io/Gerenciador-de-App1//img/wwww3schools.jpg", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
             desc: "Um recurso de aprendizado online que oferece tutoriais, referências e exemplos de código.",
             text: "Abrir"
         },
