--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ function teste() {
         {
             text1: "GitHub",
             link: "https://github.com/",
-            imgSrc: "/img/icons8-github.svg", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
+            imgSrc: "https://www.youtube.com/watch?v=BU-w2_Aae54/img/icons8-github.svg", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
             desc: "Plataforma de desenvolvimento colaborativo, permitindo hospedar e revisar código, gerenciar projetos e mais.",
             text: "Abrir"
         },
@@ -173,7 +173,7 @@ function teste() {
         {
             text1: "Fonts Google",
             link: "https://fonts.google.com/icons",
-            imgSrc: "/img/icons8-fontes-do-google.svg", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
+            imgSrc: "https://www.youtube.com/watch?v=BU-w2_Aae54/img/icons8-fontes-do-google.svg", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
             desc: "Biblioteca de fontes gratuitas para melhorar a tipografia e o design em projetos da web.",
             text: "Abrir"
         },
