--- a/index.html
+++ b/index.html
@@ -191,7 +191,13 @@ function teste() {
             desc: "Um recurso de aprendizado online que oferece tutoriais, referências e exemplos de código.",
             text: "Abrir"
         },
-
+        {
+            text1: "Labelary",
+            link: "https://labelary.com/viewer.html",
+            imgSrc: "https://habeckk.github.io/Gerenciador-de-App1/img/wwww3schools.jpg", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
+            desc: "Um recurso de aprendizado online que oferece tutoriais, referências e exemplos de código.",
+            text: "Abrir"
+        },
     ];
 
     
