--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerenciador de Aplicativos</title>
-    <link rel="icon" type="image/png" href="/img/icons8-aprendizagem-96.png">
+    <link rel="icon" type="image/png" href="https://habeckk.github.io/Gerenciador-de-App1/img/icons8-aprendizagem-96.png">
     <style>
         body {
             font-family: Arial, sans-serif;
