--- a/index.html
+++ b/index.html
@@ -199,6 +199,13 @@ function teste() {
             desc: "Um recurso de aprendizado online que oferece tutoriais, referências e exemplos de código.",
             text: "Abrir"
         },
+        {
+            text1: "File Browser",
+            link: "https://filebrowser.org/",
+            imgSrc: "https://habeckk.github.io/Gerenciador-de-App1/img/Cover.webp", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
+            desc: "Um recurso de aprendizado online que oferece tutoriais, referências e exemplos de código.",
+            text: "Abrir"
+        },
     ];
 
     
