--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 250px;
+    height: 80px;
 }
 
         .card:hover {
