--- a/index.html
+++ b/index.html
@@ -194,6 +194,14 @@ function teste() {
             desc: "Um recurso de aprendizado online que oferece tutoriais, referências e exemplos de código.",
             text: "Abrir"
         },
+        {
+            text1: "File Browser",
+            link: "https://console.firebase.google.com/?hl=pt",
+            imgSrc: "https://habeckk.github.io/Gerenciador-de-App1/img/icons8-firebase.svg", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
+            desc: "Um recurso de aprendizado online que oferece tutoriais, referências e exemplos de código.",
+            text: "Abrir"
+        },
+
     ];
 
     
