--- a/index.html
+++ b/index.html
@@ -191,14 +191,14 @@ function teste() {
             text1: "File Browser",
             link: "https://filebrowser.org/",
             imgSrc: "https://habeckk.github.io/Gerenciador-de-App1/img/Cover.webp", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
-            desc: "Um recurso de aprendizado online que oferece tutoriais, referências e exemplos de código.",
+            desc: "Aplicativo de navegação de arquivos, permite explorar e gerenciar documentos, mídia e pastas em dispositivos móveis e na nuvem.",
             text: "Abrir"
         },
         {
-            text1: "File Browser",
+            text1: "Firebase",
             link: "https://console.firebase.google.com/?hl=pt",
             imgSrc: "https://habeckk.github.io/Gerenciador-de-App1/img/icons8-firebase.svg", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
-            desc: "Um recurso de aprendizado online que oferece tutoriais, referências e exemplos de código.",
+            desc: "Plataforma de desenvolvimento de aplicativos, oferece serviços de banco de dados, autenticação, armazenamento e análise em tempo real.",
             text: "Abrir"
         },
 
