--- a/index.html
+++ b/index.html
@@ -201,6 +201,14 @@ function teste() {
             desc: "Plataforma de desenvolvimento de aplicativos, oferece serviços de banco de dados, autenticação, armazenamento e análise em tempo real.",
             text: "Abrir"
         },
+        {
+            text1: "Firebase",
+            link: "https://web.postman.co/",
+            imgSrc: "https://habeckk.github.io/Gerenciador-de-App1/img/icons8-postman-96.png", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
+            desc: "Plataforma de colaboração para desenvolvimento de API, permitindo testar, documentar e compartilhar APIs de forma eficiente.",
+            text: "Abrir"
+        },
+
 
     ];
 
