--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ function teste() {
             text: "Abrir"
         },
         {
-            text1: "Firebase",
+            text1: "Postman",
             link: "https://web.postman.co/",
             imgSrc: "https://habeckk.github.io/Gerenciador-de-App1/img/icons8-postman-96.png", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
             desc: "Plataforma de colaboração para desenvolvimento de API, permitindo testar, documentar e compartilhar APIs de forma eficiente.",
