--- a/index.html
+++ b/index.html
@@ -278,7 +278,20 @@ function teste() {
             desc: "Cliente HTTP online para testar e depurar APIs RESTful.",
             text: "Abrir"
         },
-
+        {
+            text1: "QR.io",
+            link: "https://qr.io/",
+            imgSrc: "https://habeckk.github.io/Gerenciador-de-App1/img/QRio.png", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
+            desc: "Serviço para criar e escanear códigos QR, facilitando o compartilhamento de informações em dispositivos móveis.",
+            text: "Abrir"
+        },
+        {
+            text1: "QR Code Generator",
+            link: "https://br.qr-code-generator.com/",
+            imgSrc: "https://habeckk.github.io/Gerenciador-de-App1/img/QR Code Generator.png", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
+            desc: "Ferramenta online para gerar códigos QR personalizados com URL, texto, números e outros dados.",
+            text: "Abrir"
+        },
     ];
 
     
