--- a/index.html
+++ b/index.html
@@ -109,17 +109,10 @@ function teste() {
     var appData = [
 
         {
-            text1: "Wakatime",
-            link: "https://wakatime.com/dashboard",
-            imgSrc: "https://habeckk.github.io/Gerenciador-de-App1/img/wakatime.svg", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
-            desc: "Monitora o tempo gasto codificando para melhorar a produtividade e a eficiência do desenvolvedor.",
-            text: "Abrir"
-        },
-        {
-            text1: "Icons8",
-            link: "https://icons8.com.br/icons",
-            imgSrc: "https://habeckk.github.io/Gerenciador-de-App1/img/novo-logotipo.svg", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
-            desc: "Oferece ícones gratuitos e ferramentas de design para criar interfaces visuais atraentes.",
+            text1: "Copiloto",
+            link: "https://www.bing.com/search?q=Bing%20AI&showconv=1&form=MA13FV&wlexpsignin=1",
+            imgSrc: "https://habeckk.github.io/Gerenciador-de-App1/img/9759dc3bced042989f176efa44fc0fa0.png", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
+            desc: "Um assistente de codificação por IA que oferece sugestões de código em tempo real",
             text: "Abrir"
         },
         {
@@ -137,6 +130,20 @@ function teste() {
             text: "Abrir"
         },
         {
+            text1: "Wakatime",
+            link: "https://wakatime.com/dashboard",
+            imgSrc: "https://habeckk.github.io/Gerenciador-de-App1/img/wakatime.svg", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
+            desc: "Monitora o tempo gasto codificando para melhorar a produtividade e a eficiência do desenvolvedor.",
+            text: "Abrir"
+        },
+        {
+            text1: "Icons8",
+            link: "https://icons8.com.br/icons",
+            imgSrc: "https://habeckk.github.io/Gerenciador-de-App1/img/novo-logotipo.svg", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
+            desc: "Oferece ícones gratuitos e ferramentas de design para criar interfaces visuais atraentes.",
+            text: "Abrir"
+        },
+        {
             text1: "GitHub",
             link: "https://github.com/",
             imgSrc: "https://habeckk.github.io/Gerenciador-de-App1/img/icons8-github.svg", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
@@ -148,13 +155,6 @@ function teste() {
             link: "https://vscode.dev/",
             imgSrc: "https://habeckk.github.io/Gerenciador-de-App1/img/icons8-visual-studio-code-2019.svg", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
             desc: "Um editor de código-fonte leve e poderoso, altamente personalizável, desenvolvido pela Microsoft.",
-            text: "Abrir"
-        },
-        {
-            text1: "Copiloto",
-            link: "https://www.bing.com/search?q=Bing%20AI&showconv=1&form=MA13FV&wlexpsignin=1",
-            imgSrc: "https://habeckk.github.io/Gerenciador-de-App1/img/9759dc3bced042989f176efa44fc0fa0.png", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
-            desc: "Um assistente de codificação por IA que oferece sugestões de código em tempo real",
             text: "Abrir"
         },
         {
@@ -290,6 +290,13 @@ function teste() {
             link: "https://br.qr-code-generator.com/",
             imgSrc: "https://habeckk.github.io/Gerenciador-de-App1/img/QR Code Generator.png", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
             desc: "Ferramenta online para gerar códigos QR personalizados com URL, texto, números e outros dados.",
+            text: "Abrir"
+        },
+        {
+            text1: "Arduino",
+            link: "https://create.arduino.cc/editor",
+            imgSrc: "https://habeckk.github.io/Gerenciador-de-App1/img/icons8-arduino.svg", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
+            desc: "Plataforma de desenvolvimento online da Arduino, projetada para escrever, compartilhar e simular código para projetos de Arduino diretamente no navegador.",
             text: "Abrir"
         },
     ];
