--- a/index.html
+++ b/index.html
@@ -299,6 +299,13 @@ function teste() {
             desc: "Plataforma de desenvolvimento online da Arduino, projetada para escrever, compartilhar e simular código para projetos de Arduino diretamente no navegador.",
             text: "Abrir"
         },
+        {
+            text1: "Mui",
+            link: "https://mui.com/material-ui/",
+            imgSrc: "https://habeckk.github.io/Gerenciador-de-App1/img/Mui.png", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
+            desc: "Oferece componentes React para criar interfaces seguindo o Material Design do Google, facilitando o desenvolvimento de UIs elegantes e funcionais.",
+            text: "Abrir"
+        },
     ];
 
     
