--- a/index.html
+++ b/index.html
@@ -306,6 +306,13 @@ function teste() {
             desc: "Oferece componentes React para criar interfaces seguindo o Material Design do Google, facilitando o desenvolvimento de UIs elegantes e funcionais.",
             text: "Abrir"
         },
+        {
+            text1: "Node-RED",
+            link: "https://nodered.org/",
+            imgSrc: "https://habeckk.github.io/Gerenciador-de-App1/img/Node-red-icon.png", // Substitua 'URL_DA_IMAGEM' pela URL da imagem que você quer usar
+            desc: "Node-RED é uma ferramenta visual para integrar dispositivos, APIs e serviços online, simplificando o desenvolvimento de aplicações IoT com uma interface gráfica.",
+            text: "Abrir"
+        },
     ];
 
     
